# vs19_pch_problem

./: CMakeSettings.json  README.md
CMakeProject2/: CMakeLists.txt  CMakeProject2.cpp  pchheader.h
